# posts-app

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/proto/: postservice.proto
src-tauri/src/: main.rs
src/components/: CreatePost.tsx  Footer.tsx  PostDetails.tsx
