[package]
name = "posts"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }
tonic-build = "0.10.0"

[dependencies]
tauri = { version = "1.4", features = [ "updater", "shell-execute", "shell-open", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14" }
hyper-rustls = { version = "0.24", features = ["http2"] }
http-body = { version = "0.4.2" }
prost = "0.12"
prost-types = "0.12"
tonic = { version = "0.10.0" }
tonic-web = { version = "0.10.0" }
tonic-health = { version = "0.10.0" }
tonic-reflection = { version = "0.10.0" }
tonic-types = { version = "0.10.0" }
tower = { version = "0.4" }
tower-http = { version = "0.4" }
tokio = { version = "1.32.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
